--- a/style/general.css
+++ b/style/general.css
@@ -17,6 +17,10 @@ body {
     text-align: center;
 }
 
+#languageSelection label {
+    text-transform: uppercase;
+}
+
 #eventHome {
     padding-top: 120px;
     padding-bottom: 120px;
@@ -120,7 +124,7 @@ h1, h2 {
 }
 
 /*Registration form style*/
-		
+
 #eventRegistration {
     padding-top: 80px;
     padding-bottom: 80px;
@@ -128,50 +132,50 @@ h1, h2 {
     color: white;
 }
 
-#registrationForm{
-	padding-top: 50px;
-	max-width: 900px;
-	float: none;
-	margin-left: auto;
-	margin-right: auto;
+#registrationForm {
+    padding-top: 50px;
+    max-width: 900px;
+    float: none;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .reg-input {
-	width: 100%;
-	border-radius: 3px;
-	border: 0;	
-	color: black;
+    width: 100%;
+    border-radius: 3px;
+    border: 0;
+    color: black;
 }
 
-.reg-textbox{
-	margin: auto;
-	margin-bottom: 20px;	
-	padding: 3px 8px 3px 8px;
-	height: 34px;
+.reg-textbox {
+    margin: auto;
+    margin-bottom: 20px;
+    padding: 3px 8px 3px 8px;
+    height: 34px;
 }
 
 .reg-textarea {
-	text-align: left;
-	text-transform: none;
-	resize: none;
-	height: 150px;
-	padding: 15px 8px 15px 8px;
+    text-align: left;
+    text-transform: none;
+    resize: none;
+    height: 150px;
+    padding: 15px 8px 15px 8px;
 }
 
 .notification p {
-	border-radius: 3px;
-	color: #FFF;
-	padding: 5px 10px;
-	display: inline-block;
-	margin-bottom: 10px;
+    border-radius: 3px;
+    color: #FFF;
+    padding: 5px 10px;
+    display: inline-block;
+    margin-bottom: 10px;
 }
 
 .error p {
-	background: #E96656;
+    background: #E96656;
 }
 
 .success p {
-	background: #34d293;
+    background: #34d293;
 }
 
 .reg-button {
@@ -181,8 +185,8 @@ h1, h2 {
     border-radius: 3px;
     font-size: 20px;
     font-weight: bold;
-	margin: 16px 5px 5px 0px;
-	float:left;
+    margin: 16px 5px 5px 0px;
+    float: left;
 }
 
 .reg-button:hover {
@@ -191,10 +195,10 @@ h1, h2 {
     color: white;
 }
 
-div.recaptcha-container{
-	margin: 5px 5px 5px 5px;
-	display: inline-block; 
-	opacity: 1;
-	float: left;
+div.recaptcha-container {
+    margin: 5px 5px 5px 5px;
+    display: inline-block;
+    opacity: 1;
+    float: left;
 }
 
