--- a/style/timeline.css
+++ b/style/timeline.css
@@ -1,5 +1,5 @@
 .tab-content {
-    padding-top: 4%;
+    margin-top: 25px;
     transition: height 1s;
 }
 
@@ -12,7 +12,10 @@
 }
 
 #timeline {
-    background: url(http://dummyimage.com/1x1/f43059/f43059.gif) top center repeat-y;
+
+    background-repeat: repeat-y;
+    background-size: 3px 3px;
+    /* background: url(../img/redDot.png) top center repeat-y;*/
     padding: 50px 0;
     overflow: hidden;
     list-style: none;
@@ -20,46 +23,53 @@
     text-align: center;
 }
 
-#timeline:before,
-#timeline:after {
+/*Start*/
+.verticalAxis:before,
+.verticalAxis:after {
     content: " ";
-    width: 10px;
-    height: 10px;
+    width: 13px;
+    height: 13px;
     display: block;
-    background: #f43059;
+    background: #8a0202;
     position: absolute;
     top: 0;
-    left: 50%;
+    left: 100%;
     margin-left: -5px;
-
-    -moz-border-radius: 20px;
-    -webkit-border-radius: 20px;
-    border-radius: 20px;
+    border-radius: 7px;
 }
 
-#timeline:after {
-    margin-left: -7px;
+/*DownArrow at end*/
+.verticalAxis:after {
+    margin-left: -9px;
     background: none;
-    border: 7px solid transparent;
-    border-top-color: #f43059;
+    border: 10px solid transparent;
+    border-top-color: #8a0202;
     width: 0;
     height: 0;
     top: auto;
-    bottom: -7px;
-
+    bottom: -11px;
     -moz-border-radius: 0;
     -webkit-border-radius: 0;
     border-radius: 0;
 }
 
+/*Vertical line*/
+#eventSchedule .verticalAxis {
+    position: absolute;
+    height: 95%;
+    width: 48.266%;
+    border-right: 3px #8b0404 solid;
+}
+
+/*Block*/
 #timeline li {
     position: relative;
     clear: both;
     float: left;
     width: 318px;
-    padding: 10px;
-    background: #fef8c4;
-    border: 1px solid #d8d566;
+    padding: 16px 10px 2px 10px;
+    background-color: white;
+
     text-align: right;
     margin: 0 0 10px 0;
 
@@ -71,21 +81,38 @@
     box-shadow: 0 1px #fff inset;
 }
 
-@media screen and (min-width: 992px) {
-    #timeline li:before,
-    #timeline li:after {
-        content: " ";
-        width: 13.6%;
-        height: 1px;
-        background: #f43059;
-        position: absolute;
-        left: 100%;
-        top: 50%;
-        background: -moz-linear-gradient(0, #d8d566, #f43059);
-        background: -webkit-gradient(linear, left top, right top, from(#d8d566), to(#f43059));
+/*Align blocks on one side for small res*/
+@media screen and (max-width: 768px) {
+    #timeline li {
+        text-align: center !important;
+        float: none !important;
+        width: initial;
     }
 }
 
+#timeline .insideBlock {
+
+}
+
+/*Sideconnections*/
+@media screen and (min-width: 768px) {
+    #timeline li:before,
+    #timeline li:after {
+        content: " ";
+        width: 13%;
+        height: 3px;
+        background: #8a0202;
+        position: absolute;
+        left: 100%;
+        top: 50%;
+    }
+
+    #timeline li:nth-of-type(even):after {
+        width: 13%;
+    }
+}
+
+/*Positioner*/
 #timeline li:nth-of-type(odd),
 #timeline li:nth-of-type(even) {
     margin: -10px 0 0 0;
@@ -104,10 +131,9 @@
 }
 
 #timeline li:nth-of-type(even):after {
-    background: -moz-linear-gradient(0, #f43059, #d8d566);
-    background: -webkit-gradient(linear, left top, right top, from(#f43059), to(#d8d566));
     left: auto;
     right: 100%;
+    z-index: -1;
 }
 
 #timeline time {
