--- a/style/general.css
+++ b/style/general.css
@@ -1,5 +1,6 @@
 body {
     font-family: 'Roboto', sans-serif !important;
+
 }
 
 .row {
@@ -7,14 +8,12 @@ body {
     padding: 0px;
 }
 
-#eventHome {
-    padding-top: 120px;
-    padding-bottom: 120px;
-    background-color: #537679;
-    color: white;
+body section, .fullAuto {
+    margin: auto !important;
 }
 
-#eventHome .nav {
+/*Custom pills */
+.nav {
     display: inline-block;
     float: none;
     vertical-align: top;
@@ -22,31 +21,96 @@ body {
     text-transform: uppercase;
 }
 
-#eventHome .nav a {
-    color: white
+.nav a {
+    font-weight: bold;
+    color: #020202;
 }
 
-#eventHome li:not(.active) a:hover {
-    background-color: darkgray;
+.nav li.active a {
+    background-color: #FFE450;
+    color: #020202;
+}
+
+.nav li.active a:focus {
+    background-color: #FFE450;
+    color: #020202;
+}
+
+.nav li:not(.active) a:hover {
+    background-color: white;
+}
+
+.nav li.active a:hover {
+    background-color: #FFE450;
+    color: #020202;
+}
+
+/*End: Custom pills*/
+
+/*Theme button*/
+.signUpButton {
+    transition: background-color 0.5s ease;
+    background-color: #FFE450;
+    color: #020202;
+    border-color: #FFE450;
+    border-radius: 3px;
+    margin-top: 75px;
+    padding: 15px 50px;
+    font-size: 24px;
+    font-weight: bold;
+}
+
+.signUpButton:hover {
+    background-color: transparent;
+    border-color: white;
+    color: white;
+}
+
+/*End: Theme button*/
+
+#homeWrapper {
+    background-image: url("../img/bokeh.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: 50% 50%;
+}
+
+#eventHome {
+    padding-top: 120px;
+    padding-bottom: 120px;
+    background-color: rgba(255, 252, 245, 0.5);;
+    color: #363636;
+}
+
+#descriptionWrapper {
+    /* background-color: rgba(138, 6, 6, 0.68);*/
 }
 
 #eventDescription {
-    background-color: #C1D5C3;
+    background-color: rgb(249, 246, 239);
     color: black;
 }
 
-#eventSchedule {
-    overflow: hidden;
+#description {
+    padding: 40px;
+    font-size: x-large;
+    /* font-weight: bold;*/
+    margin-bottom: 0px;
 }
 
-#eventSchedule .nav {
-    display: inline-block;
-    float: none;
-    vertical-align: top;
-    text-align: center;
+#eventSpeakers {
+    border-radius: 3px;
+    background-color: #FFE450;
+    padding-bottom: 20px;
+}
+
+#eventSpeakers #titleSchedule {
+    padding: 0px;
+    padding-top: 15px;
 }
 
 #eventSpeakers #eventSpeakersContainer .speaker {
+    margin-top: 25px;
     width: 200px;
     display: inline-block;
     vertical-align: top;
@@ -60,8 +124,6 @@ body {
     background-size: cover;
     background-repeat: no-repeat;
     background-position: 50% 50%;
-
-    border: 4px #890404 solid;
     border-radius: 20px;
 }
 
@@ -70,46 +132,66 @@ body {
     font-size: 22px;
     margin: 15px 0 0;
     line-height: 1;
-    color: #54777a;
+    color: #373737;
 }
 
 #eventSpeakers #eventSpeakersContainer .speakerDetail {
     width: 100%;
     font-size: 18px;
+    color: black;
 }
 
 #eventSpeakers #eventSpeakersContainer .description {
     margin-top: 5px;
 }
 
-#description {
-    padding: 40px;
-    font-size: x-large;
-    font-weight: bold;
-    margin-bottom: 0px;
-}
-
 #titleSchedule {
     padding: 30px;
 }
 
+#eventSchedule {
+    border-radius: 3px;
+    overflow: hidden;
+    background-color: rgb(255, 252, 245);
+}
+
+#eventLocation .container {
+    border-radius: 3px;
+    padding: 0px;
+    background-color: #FFE450;
+}
+
 #eventLocation h2, h3 {
-    margin: 0px;
+    margin: 20px;
+}
+
+#map {
+    margin: auto;
+    width: 100%;
+    height: 400px;
+    overflow: hidden;
 }
 
 #faq {
-    background-color: #C1D5C3;
-    padding-top: 10px;
-    padding-bottom: 30px;
+    background-color: #fffcf5;
+    padding-bottom: 10px;
 }
 
 #faq .faq-title {
-    margin-bottom: 30px;
+    margin-top: 30px;
+    margin-bottom: 0px;
+    color: black;
+}
+
+#faq .faqArticle {
+    margin-top: 25px;
 }
 
 #faq p {
+    color: black;
     text-align: left;
     font-size: larger;
+
 }
 
 .title {
@@ -133,35 +215,14 @@ h1, h2 {
     font-size: 20px;
 }
 
-.signUpButton {
-    transition: background-color 0.5s ease;
-    background-color: #A7625E;
-    border-color: white;
-    border-radius: 3px;
-    margin-top: 75px;
-    padding: 15px 50px;
-    font-size: 24px;
-    font-weight: bold;
-}
-
-.signUpButton:hover {
-    background-color: transparent;
-    border-color: white;
-    color: white;
-}
-
-#map {
-    margin: auto;
-    width: 100%;
-    height: 400px;
-    overflow: hidden;
-}
-
 /*Registration form style*/
 #eventRegistration {
     padding-top: 80px;
     padding-bottom: 80px;
-    background-color: #537679;
+    background-image: url("../img/bokeh.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: 50% 50%;
     color: white;
 }
 
@@ -171,6 +232,11 @@ h1, h2 {
     float: none;
     margin-left: auto;
     margin-right: auto;
+}
+
+#registrationForm .reg-button {
+    margin-top: 13px;
+    float: right;
 }
 
 .reg-input {
@@ -211,27 +277,35 @@ h1, h2 {
     background: #34d293;
 }
 
-.reg-button {
-    transition: background-color 0.5s ease;
-    background-color: #A7625E;
-    border-color: white;
-    border-radius: 3px;
-    font-size: 20px;
-    font-weight: bold;
-    margin: 16px 5px 5px 0px;
-    float: left;
-}
-
-.reg-button:hover {
-    background-color: transparent;
-    border-color: white;
-    color: white;
-}
-
 div.recaptcha-container {
     margin: 5px 5px 5px 5px;
     display: inline-block;
     opacity: 1;
     float: left;
 }
+
+::-webkit-input-placeholder {
+    /* WebKit, Blink, Edge */
+    color: black;
+    font-size: larger;
+}
+
+:-moz-placeholder {
+    /* Mozilla Firefox 4 to 18 */
+    color: black;
+    font-size: larger;
+}
+
+::-moz-placeholder {
+    /* Mozilla Firefox 19+ */
+    color: black;
+    font-size: larger;
+}
+
+:-ms-input-placeholder {
+    /* Internet Explorer 10-11 */
+    color: black;
+    font-size: larger;
+}
+
 
