--- a/style/timeline.css
+++ b/style/timeline.css
@@ -30,7 +30,7 @@
     width: 13px;
     height: 13px;
     display: block;
-    background: #8a0202;
+    background: black;
     position: absolute;
     top: 0;
     left: 100%;
@@ -43,7 +43,7 @@
     margin-left: -9px;
     background: none;
     border: 10px solid transparent;
-    border-top-color: #8a0202;
+    border-top-color: black;
     width: 0;
     height: 0;
     top: auto;
@@ -58,17 +58,18 @@
     position: absolute;
     height: 95%;
     width: 48.266%;
-    border-right: 3px #8b0404 solid;
+    border-right: 3px black solid;
 }
 
 /*Block*/
 #timeline li {
+    font-size: larger;
     position: relative;
     clear: both;
     float: left;
     width: 318px;
     padding: 16px 10px 2px 10px;
-    background-color: white;
+    background-color: #fffcf5;
 
     text-align: right;
     margin: 0 0 10px 0;
@@ -76,9 +77,6 @@
     -moz-border-radius: 2px;
     -webkit-border-radius: 2px;
     border-radius: 2px;
-    -moz-box-shadow: 0 1px #fff inset;
-    -webkit-box-shadow: 0 1px #fff inset;
-    box-shadow: 0 1px #fff inset;
 }
 
 /*Align blocks on one side for small res*/
@@ -101,7 +99,7 @@
         content: " ";
         width: 13%;
         height: 3px;
-        background: #8a0202;
+        background: black;
         position: absolute;
         left: 100%;
         top: 50%;
@@ -133,7 +131,6 @@
 #timeline li:nth-of-type(even):after {
     left: auto;
     right: 100%;
-    z-index: -1;
 }
 
 #timeline time {
