Highlight the navigation link when the page is scrolled to the corresponding section.

--- a/style/general.css
+++ b/style/general.css
@@ -321,7 +321,7 @@ div.recaptcha-container {
 	color: #363636 !important;	
 }
 
-.navbar-default .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a:focus {
+.navbar-default .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a:focus, .navbar-default .navbar-nav > li.active > a{
     background-color: #FFE450;
 }
 
